Finish init & store

--- a/web/modules/custom/jpf_store/jpf_store.services.yml
+++ b/web/modules/custom/jpf_store/jpf_store.services.yml
@@ -4,4 +4,4 @@ services:
 
   jpf_store.database:
     class: Drupal\jpf_store\Services\Database
-    arguments: ['@jpf_store.csv_helper']
+    arguments: ['@jpf_store.csv_helper', '@database']
