--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-project-message": "^11",
         "drupal/core-recommended": "^11",
         "drupal/gin": "^3.0@RC",
+        "drupal/ultimate_cron": "^2.0@alpha",
         "drush/drush": "^13"
     },
     "require-dev": {
