Update modules names

--- a/web/modules/custom/jpf_import/jpf_import.info.yml
+++ b/web/modules/custom/jpf_import/jpf_import.info.yml
@@ -1,4 +1,4 @@
-name: 'Data import module'
+name: 'JPF : Data import'
 type: module
 description: 'All features for importing data.'
 core_version_requirement: ^11
