--- a/web/modules/custom/jpf_store/jpf_store.info.yml
+++ b/web/modules/custom/jpf_store/jpf_store.info.yml
@@ -1,4 +1,4 @@
-name: 'Data store module'
+name: 'JPF : Data store'
 type: module
 description: 'All features for storing data.'
 core_version_requirement: ^11
