--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,9 +2,9 @@ _core:
   default_config_hash: HlN7eAN2N4JIHsYv56V4E7sqC9bS609KwvGFjyD_mgk
 langcode: en
 uuid: a2124ba7-ff2f-4092-8e67-2a6ef29657c7
-name: 'Drush Site-Install'
-mail: admin@example.com
-slogan: ''
+name: 'Jean-Piarre Foucault'
+mail: jpf@drupal.com
+slogan: 'Jiacques Chirac love it !'
 page:
   403: ''
   404: ''
