--- a/grumphp.yml
+++ b/grumphp.yml
@@ -16,7 +16,7 @@ grumphp:
   process_timeout: 60
   ascii:
     failed: vendor/johnatas-x/angry-bearded/resources/grumpy.txt
-    succeeded: vendor/johnatas-x/angry-bearded/resources/drupal.txt
+    succeeded: .docksal/files/fdj_ascii.txt
   git_hook_variables:
     VAGRANT_HOST_DIR: .
     VAGRANT_PROJECT_DIR: /var/www
