--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -9,10 +9,12 @@ module:
   field: 0
   filter: 0
   jpf_algo: 0
+  jpf_charts: 0
   jpf_import: 0
   jpf_stats: 0
   jpf_store: 0
   jpf_utils: 0
+  jpf_views: 0
   mysql: 0
   node: 0
   page_cache: 0
