--- a/web/modules/custom/jpf_stats/drush.services.yml
+++ b/web/modules/custom/jpf_stats/drush.services.yml
@@ -1,5 +1,5 @@
 services:
-  fill.commands:
+  fill_stats.commands:
     class: Drupal\jpf_stats\Commands\FillCommands
     tags:
       - { name: drush.command }
