Init views + update dependencies

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "source": "https://github.com/johnatas-x/Jean-Piarre-Foucault"
     },
     "require": {
+        "ext-simplexml": "*",
+        "ext-tokenizer": "*",
+        "ext-xmlwriter": "*",
         "ext-zip": "*",
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.7",
@@ -24,7 +27,9 @@
         "drupal/core-recommended": "^11",
         "drupal/gin": "^3.0@RC",
         "drupal/ultimate_cron": "^2.0@alpha",
+        "drupal/view_custom_table": "^2.0",
         "drush/drush": "^13",
+        "mglaman/composer-drupal-lenient": "^1.0",
         "symfony/dotenv": "^7.1"
     },
     "require-dev": {
@@ -50,12 +55,18 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "ergebnis/composer-normalize": true,
+            "mglaman/composer-drupal-lenient": true,
             "phpro/grumphp": true,
             "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
     "extra": {
+        "drupal-lenient": {
+            "allowed-list": [
+                "drupal/view_custom_table"
+            ]
+        },
         "drupal-scaffold": {
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
