--- a/web/modules/custom/jpf_store/jpf_store.info.yml
+++ b/web/modules/custom/jpf_store/jpf_store.info.yml
@@ -4,4 +4,5 @@ description: 'All features for storing data.'
 core_version_requirement: ^11
 package: Custom
 dependencies:
+  - drush:drush
   - jpf_utils:jpf_utils
