--- a/grumphp.yml
+++ b/grumphp.yml
@@ -20,7 +20,7 @@ grumphp:
   git_hook_variables:
     VAGRANT_HOST_DIR: .
     VAGRANT_PROJECT_DIR: /var/www
-    EXEC_GRUMPHP_COMMAND: exec
+    EXEC_GRUMPHP_COMMAND: fin exec
     ENV: {}
   environment:
     files: [ ]
