--- a/config/sync/gin.settings.yml
+++ b/config/sync/gin.settings.yml
@@ -21,4 +21,4 @@ focus_color: ''
 layout_density: default
 show_description_toggle: true
 show_user_theme_settings: false
-sticky_action_buttons: true
+sticky_action_buttons: false
