--- a/web/modules/custom/jpf_utils/jpf_utils.info.yml
+++ b/web/modules/custom/jpf_utils/jpf_utils.info.yml
@@ -3,3 +3,4 @@ type: module
 description: 'Transverse features & helpers for all modules.'
 core_version_requirement: ^11
 package: Custom
+required: true
