--- a/web/modules/custom/jpf_views/jpf_views.info.yml
+++ b/web/modules/custom/jpf_views/jpf_views.info.yml
@@ -5,4 +5,5 @@ core_version_requirement: ^11
 package: Custom
 dependencies:
   - drupal:view_custom_table
+  - drupal:views
   - jpf_stats:jpf_stats
