--- a/config/sync/views.view.lotto_stats_balls.yml
+++ b/config/sync/views.view.lotto_stats_balls.yml
@@ -247,6 +247,55 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+        best_day:
+          id: best_day
+          table: lotto_balls_stats
+          field: best_day
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          label: 'Best day'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
       pager:
         type: none
         options:
@@ -285,6 +334,7 @@ display:
             count: count
             percentage: percentage
             last: last
+            best_day: best_day
           default: ball
           info:
             ball:
@@ -311,6 +361,13 @@ display:
             last:
               sortable: true
               default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            best_day:
+              sortable: true
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
