--- a/config/sync/views.view.lotto_stats_balls.yml
+++ b/config/sync/views.view.lotto_stats_balls.yml
@@ -152,8 +152,8 @@ display:
           label: Percentage
           exclude: false
           alter:
-            alter_text: true
-            text: '{{ percentage }} %'
+            alter_text: false
+            text: ''
             make_link: false
             path: ''
             absolute: false
@@ -197,7 +197,7 @@ display:
           format_plural: false
           format_plural_string: !!binary MQNAY291bnQ=
           prefix: ''
-          suffix: ''
+          suffix: ' %'
         last:
           id: last
           table: lotto_balls_stats
@@ -345,6 +345,63 @@ display:
           hide_empty: false
           empty_zero: true
           hide_alter_empty: false
+        frequency:
+          id: frequency
+          table: lotto_balls_stats
+          field: frequency
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: numeric
+          label: Frequency
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ','
+          format_plural: false
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ' days'
       pager:
         type: none
         options:
