--- a/config/sync/views.view.lotto_stats_balls.yml
+++ b/config/sync/views.view.lotto_stats_balls.yml
@@ -345,6 +345,55 @@ display:
           hide_empty: false
           empty_zero: true
           hide_alter_empty: false
+        worst_friend:
+          id: worst_friend
+          table: lotto_balls_stats
+          field: worst_friend
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          label: 'Worst friend(s)'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: None
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
         frequency:
           id: frequency
           table: lotto_balls_stats
