--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.5",
+        "drupal/charts": "^5.1",
         "drupal/core-composer-scaffold": "^11",
         "drupal/core-project-message": "^11",
         "drupal/core-recommended": "^11",
@@ -126,6 +127,9 @@
             ]
         },
         "patches": {
+            "drupal/charts": {
+                "ArgumentCountError at admin/config/content/charts on D11": "https://git.drupalcode.org/project/charts/-/merge_requests/110.patch"
+            },
             "drupal/core": {
                 "Don't execute cron on site install": "patches/disable-cron-execution-on-install.patch"
             }
