--- a/web/modules/custom/jpf_charts/jpf_charts.info.yml
+++ b/web/modules/custom/jpf_charts/jpf_charts.info.yml
@@ -4,4 +4,5 @@ description: 'All features for data charts.'
 core_version_requirement: ^11
 package: Custom
 dependencies:
+  - drupal:charts
   - jpf_stats:jpf_stats
