Some PHPStan fixes

--- a/phpstan-drupal.neon
+++ b/phpstan-drupal.neon
@@ -26,3 +26,5 @@ parameters:
       - "#^Missing cache backend declaration for performance.#"
       - "#cache tag might be unclear and does not contain the cache key in it.#"
       - "#^Class .* extends @internal class#"
+      # Fucking Drupal's mixed.
+      - "#^Cannot .* on mixed.#"
