Remove fucking Docksal and use Docker

--- a/.docker/php/php.ini
+++ b/.docker/php/php.ini
@@ -1,6 +1,7 @@
-; Global PHP settings
 [php]
-; Default time zone
 date.timezone = 'Europe/Paris'
 memory_limit = 2048M
 max_input_vars = 1000
+zend.assertions=1
+error_reporting= E_ALL
+display_errors=0
