--- a/grumphp.yml
+++ b/grumphp.yml
@@ -15,7 +15,7 @@ grumphp:
   process_timeout: 60
   ascii:
     failed: vendor/johnatas-x/angry-bearded/resources/grumpy.txt
-    succeeded: .docksal/files/fdj_ascii.txt
+    succeeded: .docker/files/fdj_ascii.txt
   git_hook_variables:
     VAGRANT_HOST_DIR: .
     VAGRANT_PROJECT_DIR: /var/www
