Variability of the Windows configuration

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ PROJECT_BASE_URL=jean-piarre-foucault.docker.localhost
 PROJECT_PORT=8000
 WODBY_USER_ID=1000
 WODBY_GROUP_ID=1000
+# Linux.
+COMPOSE_FILE=compose.yml
+# Windows.
+#COMPOSE_FILE=compose.yml;compose.windows.yml
+# WSL.
+#COMPOSE_FILE=compose.yml:compose.windows.yml
 
 ### MARIADB
 DB_NAME=drupal
