--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,9 @@ WODBY_GROUP_ID=1000
 # Linux.
 COMPOSE_FILE=compose.yml
 # Windows.
-#COMPOSE_FILE=compose.yml;compose.windows.yml
+#COMPOSE_FILE=compose.yml;.docker/compose.windows.yml
 # WSL.
-#COMPOSE_FILE=compose.yml:compose.windows.yml
+#COMPOSE_FILE=compose.yml:.docker/compose.windows.yml
 
 ### MARIADB
 DB_NAME=drupal
