--- a/grumphp.yml
+++ b/grumphp.yml
@@ -332,12 +332,10 @@ grumphp:
         priority: 0
         task: null
     shell:
-      scripts:
-        - [ "-c", ".docksal/commands/init"]
-        - [ "-c", ".docksal/commands/quality"]
+      scripts: []
       metadata:
         blocking: true
-        enabled: true
+        enabled: false
         label: null
         priority: 0
         task: null
