--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "symfony/dotenv": "^7.1"
     },
     "require-dev": {
-        "johnatas-x/angry-bearded": "^2.0",
+        "johnatas-x/angry-bearded": "2.2.3",
         "roave/security-advisories": "dev-latest"
     },
     "conflict": {
