--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ COMPOSE_FILE=compose.yml
 #COMPOSE_FILE=compose.yml;.docker/compose.windows.yml
 # WSL.
 #COMPOSE_FILE=compose.yml:.docker/compose.windows.yml
+TIMEZONE="Europe/Paris"
 
 ### MARIADB
 DB_NAME=drupal
