--- a/grumphp.yml
+++ b/grumphp.yml
@@ -19,7 +19,7 @@ grumphp:
   git_hook_variables:
     VAGRANT_HOST_DIR: .
     VAGRANT_PROJECT_DIR: /var/www
-    EXEC_GRUMPHP_COMMAND: fin exec
+    EXEC_GRUMPHP_COMMAND: docker exec jean-piarre-foucault_php
     ENV: {}
   environment:
     files: [ ]
