--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,5 @@ NGINX_VHOST_PRESET=drupal11
 ### DEBUG
 PHP_XDEBUG_MODE=debug
 PHP_IDE_CONFIG="serverName=my-ide"
+PHP_XDEBUG_START_WITH_REQUEST=yes
+XDEBUG_CONFIG="client_host=host.docker.internal client_port=9003"
