--- a/web/modules/custom/jpf_tokens/jpf_tokens.info.yml
+++ b/web/modules/custom/jpf_tokens/jpf_tokens.info.yml
@@ -6,3 +6,6 @@ package: Custom
 dependencies:
   - token:token
   - jpf_store:jpf_store
+
+'interface translation project': jpf_tokens
+'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
