--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   block: 0
   breakpoint: 0
   charts: 0
+  config_translation: 0
   dblog: 0
   dynamic_page_cache: 0
   field: 0
@@ -25,6 +26,7 @@ module:
   node: 0
   page_cache: 0
   path_alias: 0
+  potx: 0
   system: 0
   text: 0
   token: 0
@@ -34,6 +36,7 @@ module:
   user: 0
   view_custom_table: 0
   views_ui: 0
+  content_translation: 10
   views: 10
   minimal: 1000
 theme:
