--- a/web/modules/custom/jpf_algo/jpf_algo.info.yml
+++ b/web/modules/custom/jpf_algo/jpf_algo.info.yml
@@ -5,3 +5,6 @@ core_version_requirement: ^11
 package: Custom
 dependencies:
   - jpf_stats:jpf_stats
+
+'interface translation project': jpf_algo
+'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
