--- a/web/modules/custom/jpf_import/jpf_import.info.yml
+++ b/web/modules/custom/jpf_import/jpf_import.info.yml
@@ -8,3 +8,6 @@ dependencies:
   - jpf_store:jpf_store
   - jpf_utils:jpf_utils
   - ultimate_cron:ultimate_cron
+
+'interface translation project': jpf_import
+'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
