--- a/compose.yml
+++ b/compose.yml
@@ -35,6 +35,7 @@ services:
       PHP_XDEBUG_START_WITH_REQUEST: $PHP_XDEBUG_START_WITH_REQUEST
       PHP_IDE_CONFIG: $PHP_IDE_CONFIG
       PHP_XDEBUG_LOG: /tmp/php-xdebug.log
+      PHP_XDEBUG_REMOTE_LOG: /tmp/php-xdebug.log
       XDEBUG_CONFIG: $XDEBUG_CONFIG
       WODBY_USER_ID: $WODBY_USER_ID
       WODBY_GROUP_ID: $WODBY_GROUP_ID
