--- a/.docker/compose.windows.yml
+++ b/.docker/compose.windows.yml
@@ -5,3 +5,9 @@ services:
     environment:
       PHP_FPM_USER: root
       PHP_FPM_GROUP: root
+  crond:
+    user: root
+    command: "php-fpm -R"
+    environment:
+      PHP_FPM_USER: root
+      PHP_FPM_GROUP: root
