Add short date format

--- a/config/sync/views.view.lotto_stats_balls.yml
+++ b/config/sync/views.view.lotto_stats_balls.yml
@@ -7,6 +7,7 @@ dependencies:
     - user.role.administrator
     - user.role.authenticated
   module:
+    - jpf_views
     - user
     - view_custom_table
 id: lotto_stats_balls
@@ -206,6 +207,55 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: standard
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+        custom_last_date:
+          id: custom_last_date
+          table: lotto_balls_stats
+          field: custom_last_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: custom_last_date
           label: Last
           exclude: false
           alter:
