Add last update datetime on views

--- a/config/sync/views.view.lotto_stats_balls.yml
+++ b/config/sync/views.view.lotto_stats_balls.yml
@@ -655,7 +655,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: 'Stats for the current version ([versions:current_version]) since [versions:start].'
+            value: "Stats for the current version ([versions:current_version]) since [versions:start].\r\n\r\nLast update : [versions:last_update]"
             format: plain_text
           tokenize: false
       footer: {  }
