Add my python Docker config

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,13 @@ MARIADB_TAG=11.4-3.30.2
 NGINX_TAG=1.27-5.39.12
 VARNISH_TAG=6.0-4.18.4
 MEMCACHED_TAG=1-2.17.8
+PYTHON_TAG=3.13
 
 ### PROJECT SETTINGS
 PROJECT_NAME=jean-piarre-foucault
 PROJECT_BASE_URL=jean-piarre-foucault.docker.localhost
 PROJECT_PORT=8000
+PYTHON_PORT=5000
 WODBY_USER_ID=1000
 WODBY_GROUP_ID=1000
 # Linux.
