--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -8,7 +8,7 @@ slogan: 'Jiacques Chirac love it !'
 page:
   403: ''
   404: ''
-  front: /user/login
+  front: /lotto-stats-balls
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
