--- a/config/sync/charts.settings.yml
+++ b/config/sync/charts.settings.yml
@@ -1,12 +1,19 @@
 _core:
   default_config_hash: 9yjlE9uRZ55NCXhNhQk_v9NJm2Zgyb4BvLVhLRUXrcI
-dependencies: {  }
 charts_default_settings:
   library: ''
   type: line
   display:
     title: ''
+    title_position: out
     subtitle: ''
+    data_labels: false
+    data_markers: false
+    connect_nulls: false
+    legend: false
+    legend_position: right
+    background: ''
+    three_dimensional: 0
     colors:
       - '#006fb0'
       - '#f07c33'
@@ -33,18 +40,9 @@ charts_default_settings:
       - '#ff9b8f'
       - '#85000f'
       - '#ff7581'
-    color_changer: false
-    title_position: out
+    polar: 0
     tooltips: true
     tooltips_use_html: false
-    data_markers: false
-    connect_nulls: false
-    data_labels: false
-    legend: false
-    legend_position: right
-    background: ''
-    three_dimensional: 0
-    polar: 0
     dimensions:
       width: ''
       width_units: '%'
@@ -59,6 +57,7 @@ charts_default_settings:
       yellow_to: '85'
       red_from: '0'
       red_to: '50'
+    color_changer: false
   xaxis:
     title: ''
     labels_rotation: '0'
@@ -73,4 +72,5 @@ charts_default_settings:
 advanced:
   debug: false
   requirements:
-    cdn: true
+    cdn: false
+dependencies: {  }
