--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "npm-asset/chartjs-adapter-date-fns": "^3.0",
         "npm-asset/chartjs-plugin-datalabels": "^2.0",
         "oomphinc/composer-installers-extender": "^2.0",
-        "symfony/dotenv": "^7.1"
+        "symfony/dotenv": "^7.1",
+        "twig/twig": "3.19.0 as 3.16.0"
     },
     "require-dev": {
         "johnatas-x/angry-bearded": "2.2.5"
@@ -68,6 +69,11 @@
             "oomphinc/composer-installers-extender": true,
             "phpro/grumphp": true,
             "phpstan/extension-installer": true
+        },
+        "audit": {
+            "ignore": {
+                "CVE-2025-24374": "Believed not to affect Drupal core see https://www.drupal.org/project/drupal/issues/3503195."
+            }
         },
         "sort-packages": true
     },
