--- a/web/modules/custom/jpf_home/jpf_home.services.yml
+++ b/web/modules/custom/jpf_home/jpf_home.services.yml
@@ -1,4 +1,4 @@
 services:
   jpf_home.helper:
     class: Drupal\jpf_home\Services\HomepageHelper
-    arguments: ['@jpf_store.database']
+    arguments: ['@jpf_store.database', '@entity_type.manager']
