--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.5",
         "drupal/charts": "^5.1",
-        "drupal/core-composer-scaffold": "11.1.1",
-        "drupal/core-project-message": "11.1.1",
-        "drupal/core-recommended": "11.1.1",
+        "drupal/core-composer-scaffold": "11.1.2",
+        "drupal/core-project-message": "11.1.2",
+        "drupal/core-recommended": "11.1.2",
         "drupal/gin": "^3.0@RC",
         "drupal/potx": "^1.1",
         "drupal/token": "^1.15",
@@ -37,11 +37,11 @@
         "npm-asset/chartjs-adapter-date-fns": "^3.0",
         "npm-asset/chartjs-plugin-datalabels": "^2.0",
         "oomphinc/composer-installers-extender": "^2.0",
-        "symfony/dotenv": "^7.1",
-        "twig/twig": "3.19.0 as 3.16.0"
+        "symfony/dotenv": "^7.1"
     },
     "require-dev": {
-        "johnatas-x/angry-bearded": "2.2.5"
+        "johnatas-x/angry-bearded": "2.2.7",
+        "roave/security-advisories": "dev-latest"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -69,11 +69,6 @@
             "oomphinc/composer-installers-extender": true,
             "phpro/grumphp": true,
             "phpstan/extension-installer": true
-        },
-        "audit": {
-            "ignore": {
-                "CVE-2025-24374": "Believed not to affect Drupal core see https://www.drupal.org/project/drupal/issues/3503195."
-            }
         },
         "sort-packages": true
     },
