--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,5 +4,7 @@ includes:
 parameters:
     level: 10
     inferPrivatePropertyTypeFromConstructor: true
+    scanDirectories:
+      - vendor/drush/drush
     paths:
       - web/modules/custom
