Update stack + packages + data

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ### TAGS
-PHP_TAG=8.4-dev-4.65.8
-MARIADB_TAG=11.4-3.30.3
-NGINX_TAG=1.27-5.40.0
-VARNISH_TAG=6.0-4.19.0
-MEMCACHED_TAG=1-2.18.1
+PHP_TAG=8.4-4.66.0
+MARIADB_TAG=11.4-3.30.5
+NGINX_TAG=1.27-5.40.2
+VARNISH_TAG=6.0-4.19.1
+MEMCACHED_TAG=1-2.18.5
 PYTHON_TAG=3.13
 
 ### PROJECT SETTINGS
