--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,19 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
+  ],
+  "packageRules": [
+    {
+      "groupName": "Drupal core",
+      "matchPackageNames": [
+        "drupal/core-**"
+      ]
+    },
+    {
+      "groupName": "NPM asset",
+      "matchPackageNames": [
+        "npm-asset/**"
+      ]
+    }
   ]
 }
